# Influx-Agent

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
app/src/: __init__.py  main.py
app/src/agent/: formatting.py  llm.py  schema_loader.py  state.py
app/src/agent/graphs/: agent_graph.py  intent_graph.py
app/src/agent/nodes/: anomaly_pipeline.py  build_query.py  execute_query.py  guardrails.py  intent_classifier.py  query_pipeline.py  refine_schema.py  resolve_time.py  select_database.py  select_measurements.py  unsupported_response.py
app/src/api/routes/: chat.py  openai.py  schema.py
app/src/core/: config.py
app/src/data/: influx_schema.json
app/src/db/: client.py
app/src/llm/: ollama_client.py
app/src/schemas/: chat.py
app/src/services/: agent_service.py
docs/images/: langgraph-architecture.dot
